# agent_stock_system

./: .gitignore  .pylintrc  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/: design.md  implementation_plan.md  improvement_ideas.md
frontend/: app.js  guide.html  i18n.js  index.html  landing.html  playground.html  playground.js  strategies.html  style.css
src/: config.py  crew.py  main.py
src/agents/: backtest.py  critique.py  market_data.py  python_master.py  strategy.py
src/prompts/: code_review.txt  result_explain.txt  strategy_gen.txt
src/tools/: backtest_runner.py  code_validator.py  db.py  fetch_data.py  indicators.py  job_queue.py  synthetic_data.py  ta_helpers.py
strategies/: AAPL_First_1.py  AAPL_S1_1.py  AAPL_S_1.py  AAPL_TestStrat_1.py  META_S_1.py  NVDA_MyStrat_1.py  NVDA_NVDA_Strategy_7.py  NVDA_NVDA_Trading_Strategy_2.py  NVDA_S_1.py  PLTR_PLTRStrategy_3.py  PLTR_PLTRTradingStrategy_4.py  TSLA_S2_2.py  TSLA_S_1.py  TSLA_Second_2.py  TSM_TSMStrategy_5.py  TSM_TSMStrategy_6.py
tests/: test_backtest_runner.py  test_code_validator.py  test_db.py  test_indicators.py  test_ta_helpers.py
tests/integration/: conftest.py  test_api.py
