[project]
name = "agent-stock-system"
version = "0.1.0"
description = "AI-powered quantitative trading strategy system"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "backtesting>=0.3.3",
    "crewai[tools]>=0.76.0,<1.0.0",
    "fastapi>=0.115.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.1.0",
    "uvicorn[standard]>=0.30.0",
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
]

[project.scripts]
dev = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
